Fix image overflow issue for home-image

--- a/src/styles.css
+++ b/src/styles.css
@@ -163,7 +163,7 @@ button:hover {
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.2);
   padding: 10px;
-  height: 60%;
+  height: 65%;
   display: flex;
   padding: 3rem;
   gap: 20px;
